--- a/staplesWatchApp/Base.lproj/Interface.storyboard
+++ b/staplesWatchApp/Base.lproj/Interface.storyboard
@@ -15,14 +15,14 @@
             <objects>
                 <controller title="iStaples" id="cqY-YQ-giD" customClass="InterfaceController" customModule="staplesWatchApp" customModuleProvider="target">
                     <items>
-                        <label width="136" height="15" alignment="left" text="--" textAlignment="left" id="Sln-oa-n2f">
+                        <label width="1" height="15" alignment="left" text="Loading..." textAlignment="left" minimumScaleFactor="0.69999999999999996" id="Sln-oa-n2f">
                             <fontDescription key="font" type="system" weight="medium" pointSize="20"/>
-                            <variation key="device=watch42mm" height="20" width="156"/>
+                            <variation key="device=watch42mm" height="20"/>
                         </label>
                         <separator alignment="left" id="OKU-W6-vQB">
                             <color key="color" red="0.0" green="0.79118653819999996" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         </separator>
-                        <group width="1" alignment="left" id="qDZ-KR-CnJ">
+                        <group width="1" alignment="left" hidden="YES" id="qDZ-KR-CnJ">
                             <items>
                                 <timer alignment="left" previewedSeconds="0" id="SME-Ox-Ph2">
                                     <calendarUnit key="units" minute="YES" second="YES"/>
@@ -33,7 +33,7 @@
                                 </timer>
                             </items>
                         </group>
-                        <group width="117" height="109" alignment="center" verticalAlignment="center" backgroundImage="single0" contentMode="scaleAspectFit" id="JF3-6P-ckx">
+                        <group width="117" height="109" alignment="center" verticalAlignment="center" contentMode="scaleAspectFit" id="JF3-6P-ckx">
                             <items>
                                 <label width="136" height="116" alignment="center" verticalAlignment="center" hidden="YES" text="enjoy the weekend!" textAlignment="center" numberOfLines="0" minimumScaleFactor="0.10000000000000014" id="Eeb-Ge-i6u">
                                     <fontDescription key="font" type="system" weight="thin" pointSize="29"/>
@@ -98,6 +98,7 @@
                                         <outlet property="lunchWaveLabel" destination="hqa-AE-AFP" id="x1y-YF-HaR"/>
                                         <outlet property="periodNumberLabel" destination="7mn-ue-tJq" id="zmQ-0V-rmF"/>
                                         <outlet property="timeLabel" destination="0Fj-rx-emk" id="TGN-H1-Alw"/>
+                                        <segue destination="n7P-Dn-Z8n" kind="push" identifier="scheduleDetailSegue" id="6kB-Vs-ksG"/>
                                     </connections>
                                 </tableRow>
                             </items>
@@ -111,27 +112,33 @@
             </objects>
             <point key="canvasLocation" x="587" y="718"/>
         </scene>
-        <!--Period Detail Controller-->
+        <!--scheduleDetailVC-->
         <scene sceneID="g6L-TJ-Por">
             <objects>
-                <controller id="n7P-Dn-Z8n" customClass="PeriodDetailController" customModule="staplesWatchApp_Extension">
+                <controller identifier="scheduleDetailVC" id="n7P-Dn-Z8n" customClass="PeriodDetailController" customModule="staplesWatchApp_Extension">
                     <items>
-                        <group width="1" alignment="left" id="5Ia-ut-21Q">
+                        <group width="136" alignment="left" id="5Ia-ut-21Q">
                             <items>
                                 <label alignment="left" text="7" textAlignment="center" id="Kgx-8R-IND">
                                     <fontDescription key="font" type="boldSystem" pointSize="40"/>
                                 </label>
-                                <label width="110" height="62" alignment="center" text="AP Physics C" textAlignment="center" numberOfLines="0" minimumScaleFactor="0.59999999999999998" id="0Bi-bz-9sj">
+                                <label width="105" alignment="right" text="AP Physics C" textAlignment="center" numberOfLines="0" minimumScaleFactor="0.5" id="0Bi-bz-9sj">
                                     <color key="textColor" red="0.10677196791341081" green="0.77190711161485259" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <fontDescription key="font" type="system" weight="medium" pointSize="20"/>
                                 </label>
                             </items>
                         </group>
-                        <label alignment="center" text="Joanne Klouda" id="OCX-cw-oa6">
+                        <label alignment="center" text="Joanne Klouda" textAlignment="center" numberOfLines="0" minimumScaleFactor="0.69999999999999996" id="OCX-cw-oa6">
                             <color key="textColor" red="1" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                         </label>
-                        <label alignment="left" text="Quarters: 1, 2, 3, 4" id="4PX-kq-sDb"/>
+                        <label alignment="center" text="Quarters: 1, 2, 3, 4" textAlignment="center" id="4PX-kq-sDb"/>
                     </items>
+                    <connections>
+                        <outlet property="periodNumberLabel" destination="Kgx-8R-IND" id="ttB-lS-lsm"/>
+                        <outlet property="periodTitleLabel" destination="0Bi-bz-9sj" id="Gny-D7-Pvp"/>
+                        <outlet property="quartersLabel" destination="4PX-kq-sDb" id="LN8-ZZ-n40"/>
+                        <outlet property="teacherLabel" destination="OCX-cw-oa6" id="wvi-D7-YHA"/>
+                    </connections>
                 </controller>
             </objects>
             <point key="canvasLocation" x="839" y="718"/>
